# nostr-cli-app

./: Cargo.toml  README.md
src/: commands.rs  main.rs  tui_app.rs
