[package]
name = "nostr-cli-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr-sdk = "0.26"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.2"
dirs = "5.0"
chrono = "0.4"
ratatui = "0.25.0"
crossterm = "0.27.0"
unicode-width = "0.1.10"
hex = "0.4.3"  # 16進数文字列の処理に必要
regex = "1.10.4"
# 音声再生に必要なライブラリ
rodio = { version = "0.17.1", features = ["mp3"] }
reqwest = { version = "0.11", features = ["blocking"] }

